Introduce new core part as common content for SE and EE.

--- a/spec/src/main/doc/cdi-spec.asciidoc
+++ b/spec/src/main/doc/cdi-spec.asciidoc
@@ -12,7 +12,7 @@ include::preface.asciidoc[]
 include::architecture.asciidoc[]
 
 [[part_1]]
-= Part I - CDI in Java SE
+= Part I - Core CDI
 
 include::definition.asciidoc[]
 
@@ -35,5 +35,13 @@ include::events.asciidoc[]
 include::spi.asciidoc[]
 
 include::packagingdeployment.asciidoc[]
+
+
+[[part_2]]
+= Part II - CDI in Java SE
+include::javase/javase.asciidoc[]
+
+[[part_3]]
+= Part III - CDI in Java EE
 
 include::javaee/javaeeintegration.asciidoc[]
